@@ -5,6 +5,7 @@ use strict;
 use lib 't';
 use TestLib;
 use PgCommon;
+use Time::HiRes qw/usleep/;
 
 use Test::More tests => 57 * ($#MAJORS+1);
 
@@ -32,7 +33,7 @@ sub check_major {
     my $default_log = "/var/log/postgresql/postgresql-$v-main.log";
     check_logging qr($v main 5432 online postgres $pgdata $default_log), "pg_lscluster reports logfile $default_log";
     like_program_out 'postgres', "psql -qc \"foobar$$\"", 1, qr/syntax error.*foobar$$/, 'log an error';
-    like_program_out 'postgres', "grep foobar$$ $default_log", 0, qr/syntax error.*foobar$$/, 'error appears in logfile';
+    like_program_out 'postgres', "grep --binary-files=text foobar$$ $default_log", 0, qr/syntax error.*foobar$$/, 'error appears in logfile';
 
     # syslog
     is_program_out 0, "pg_conftool $v main set log_destination syslog", 0, "", "set log_destination syslog";
@@ -41,7 +42,8 @@ sub check_major {
     check_logging qr($v main 5432 online postgres $pgdata syslog), "pg_lscluster reports syslog";
     SKIP: {
         skip "/var/log/syslog not available", 2 unless ($syslog_works);
-        like_program_out 0, "grep 'postgres.*parameter \"log_destination\" changed to \"syslog\"' /var/log/syslog", 0, qr/log_destination/, 'error appears in /var/log/syslog';
+        usleep $delay;
+        like_program_out 0, "grep --binary-files=text 'postgres.*parameter \"log_destination\" changed to \"syslog\"' /var/log/syslog", 0, qr/log_destination/, 'error appears in /var/log/syslog';
     }
 
     # turn logging_collector on, csvlog
@@ -54,7 +56,7 @@ sub check_major {
     is_program_out 'postgres', "psql -Atc \"show log_destination\"", 0, "csvlog\n", 'log_destination is csvlog';
     check_logging qr($v main 5432 online postgres $pgdata pg_log/.*\.csv), "pg_lscluster reports csvlog";
     like_program_out 'postgres', "psql -qc \"barbaz$$\"", 1, qr/syntax error.*barbaz$$/, 'log an error';
-    like_program_out 'postgres', "grep barbaz$$ $pgdata/pg_log/*.csv", 0, qr/syntax error.*barbaz$$/, 'error appears in pg_log/*.csv';
+    like_program_out 'postgres', "grep --binary-files=text barbaz$$ $pgdata/pg_log/*.csv", 0, qr/syntax error.*barbaz$$/, 'error appears in pg_log/*.csv';
 
     # stderr,syslog,csvlog
     is_program_out 0, "pg_conftool $v main set log_destination stderr,syslog,csvlog", 0, "", "set log_destination stderr,syslog,csvlog";
@@ -62,12 +64,13 @@ sub check_major {
     is_program_out 'postgres', "psql -Atc \"show log_destination\"", 0, "stderr,syslog,csvlog\n", 'log_destination is stderr,syslog,csvlog';
     check_logging qr($v main 5432 online postgres $pgdata pg_log/.*\.log,syslog,pg_log/.*\.csv), "pg_lscluster reports stderr,syslog,csvlog";
     like_program_out 'postgres', "psql -qc \"moo$$\"", 1, qr/syntax error.*moo$$/, 'log an error';
-    like_program_out 'postgres', "grep moo$$ $pgdata/pg_log/*.log", 0, qr/syntax error.*moo$$/, 'error appears in pg_log/*.log';
+    like_program_out 'postgres', "grep --binary-files=text moo$$ $pgdata/pg_log/*.log", 0, qr/syntax error.*moo$$/, 'error appears in pg_log/*.log';
     SKIP: {
         skip "/var/log/syslog not available", 2 unless ($syslog_works);
-        like_program_out 0, "grep 'postgres.*moo$$' /var/log/syslog", 0, qr/moo$$/, 'error appears in /var/log/syslog';
+        usleep $delay;
+        like_program_out 0, "grep --binary-files=text 'postgres.*moo$$' /var/log/syslog", 0, qr/moo$$/, 'error appears in /var/log/syslog';
     }
-    like_program_out 'postgres', "grep moo$$ $pgdata/pg_log/*.csv", 0, qr/syntax error.*moo$$/, 'error appears in pg_log/*.csv';
+    like_program_out 'postgres', "grep --binary-files=text moo$$ $pgdata/pg_log/*.csv", 0, qr/syntax error.*moo$$/, 'error appears in pg_log/*.csv';
     }
 
     # stop server, clean up, check for leftovers
@@ -77,7 +80,8 @@ sub check_major {
 }
 
 system "logger -t '$0' 'test$$'";
-if (system ("grep -q 'test$$' /var/log/syslog 2> /dev/null") == 0) {
+usleep $delay;
+if (system ("grep --binary-files=text -q 'test$$' /var/log/syslog 2> /dev/null") == 0) {
     note 'Logging to /var/log/syslog works';
     $syslog_works = 1;
 } else {
